--- a/src/inc/header.less
+++ b/src/inc/header.less
@@ -44,7 +44,7 @@
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: @mobileThreshold) {
     #lang {
         position: static;
         left: 0;
