--- a/src/inc/menu.less
+++ b/src/inc/menu.less
@@ -213,7 +213,7 @@ h1 {
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: @mobileThreshold) {
     h1 {
         &:before {
             float: left;
