--- a/src/inc/tables.less
+++ b/src/inc/tables.less
@@ -78,11 +78,11 @@ table.checkable > thead {
 }
 
 table.checkable > tbody > tr:hover {
-    background: darken(#fff, 4%);
+    background: @menuHoverColor;
 }
 
 table.checkable > tbody > tr.checked:hover {
-    background: darken(@lightBgColor, 4%);
+    background: @lightBgColorHover;
 }
 
 .footer {
