--- a/src/inc/variables.less
+++ b/src/inc/variables.less
@@ -19,8 +19,9 @@
 
 @lightBorderColor: mix(@linkColor, @inputBgColor, 60%);
 @lightBgColor: mix(@linkColor, @inputBgColor, 10%);
+@lightBgColorHover: darken(@lightBgColor, 4%);
 
-@menuHoverColor: #eee;
+@menuHoverColor: darken(#fff, 4%);
 
 @codeBgColor: #e8f0fa;
 @codeBorderColor: #cde;
