Turn off horizontal scrolling on tables

--- a/src/inc/tables.less
+++ b/src/inc/tables.less
@@ -85,6 +85,10 @@ table.checkable > tbody > tr.checked:hover {
     background: @lightBgColorHover;
 }
 
+.scrollable {
+    overflow-x: visible;
+}
+
 .loadmore {
     margin: 0;
     padding: 10px 0;
