Fix page width for recent Adminer

--- a/src/inc/common.less
+++ b/src/inc/common.less
@@ -11,6 +11,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Verdana, Arial, sans-serif;
     background: @bgColor;
     color: @textColor;
+    width: 100%;
 }
 
 a, a:visited {
