--- a/src/inc/forms.less
+++ b/src/inc/forms.less
@@ -217,9 +217,8 @@ p input, p select, p label, fieldset input, fieldset select {
 }
 
 .sqlarea {
-    max-width: 100%;
-    width: auto !important;
-    height: 350px !important;
+    width: 100% !important;
+    height: 350px;
 }
 
 @media only screen and (max-width: @mobileThreshold) {
@@ -238,7 +237,7 @@ p input, p select, p label, fieldset input, fieldset select {
     }
 
     .sqlarea {
-        height: 250px !important;
+        height: 250px;
     }
 }
 
