Fix displaying views in main menu

--- a/src/inc/menu.less
+++ b/src/inc/menu.less
@@ -134,7 +134,7 @@ p#dbs {
         font-weight: bold;
     }
 
-    a.structure {
+    a.structure, a.view {
         .menu-link();
         padding-right: 0;
     }
