Fix textarea height
Original Adminer has hardcoded textarea height for SQLite text input.

Fix issue https://github.com/pematon/adminer-theme/issues/21

--- a/src/inc/forms.less
+++ b/src/inc/forms.less
@@ -32,6 +32,10 @@ textarea, pre[contenteditable="true"], select {
     box-sizing: border-box;
 }
 
+textarea {
+    height: auto !important;
+}
+
 // iOS hack
 input:not([type]), input[type="text"], input[type="email"], input[type="password"], input[type="search"], input[type="number"], textarea {
     -webkit-appearance: none;
