--- a/src/inc/menu.less
+++ b/src/inc/menu.less
@@ -72,6 +72,11 @@ h1 {
     }
 }
 
+.tables-filter {
+    padding: 10px;
+}
+
+// Compatibility with original Adminer.
 #filter-field {
     margin: 0;
     width: 100%;
