Fix language select layout on login page

--- a/src/inc/header.less
+++ b/src/inc/header.less
@@ -58,6 +58,7 @@
     background: @blockBgColor;
 
     #lang {
+        padding-right: 10px;
         position: relative;
         display: inline-block;
         vertical-align: middle;
@@ -65,7 +66,7 @@
     }
 
     .logout {
-        padding: 0 10px;
+        padding-right: 10px;
         position: relative;
         display: inline-block;
         vertical-align: middle;
